--- a/src/components/MobileNav/mobile-nav.module.scss
+++ b/src/components/MobileNav/mobile-nav.module.scss
@@ -3,7 +3,9 @@
 .mobileNav {
   background: $charcoal;
   height: 100%;
+  left: 0;
   position: fixed;
+  top: 0;
   width: 100%;
   z-index: 2;
 }
